--- a/Sylvanas/Sylvanas.csproj
+++ b/Sylvanas/Sylvanas.csproj
@@ -27,13 +27,14 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="3.0.3" />
         <PackageReference Include="Remora.Discord.Commands.Behaviours" Version="3.0.3" />
-        <PackageReference Include="Remora.Plugins" Version="1.1.1" />
+        <PackageReference Include="Remora.Discord.Hosted" Version="1.0.0" />
+        <PackageReference Include="Remora.Plugins" Version="1.1.2" />
         <PackageReference Include="Remora.Results" Version="1.0.4" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Plugins\Sylvanas.Plugins.JumboEmotes\Sylvanas.Plugins.JumboEmotes.csproj" />
       <ProjectReference Include="..\Sylvanas.Core\Sylvanas.Core.csproj" />
-      <ProjectReference Include="..\Sylvanas.Plugins.Abstractions.Database\Sylvanas.Plugins.Abstractions.Database.csproj" />
     </ItemGroup>
 
 </Project>
